style changes and responsiveness fixes

--- a/index.html
+++ b/index.html
@@ -74,22 +74,22 @@
                 target="_blank"
                 rel="noopener noreferrer"
                 >valuefy</a
-              >. When I can take some time from official work, I try to build applications to solve problems
-              (sometimes non-existent) that could potentially help people. Due
-              to my lack of motivation to sell, whatever I build usually goes to
-              a cold repo in my github and eventually to the freezing artic code
-              vault. Back in the college days, my team and I, won the Smart
-              India Hackathon 2019 edition, solving a problem of inconsistent
-              data annotations in medical research. Later during an internship,
-              I worked with Prof. Dr. K. Chandrasekaran at NIT Surathkal and
-              published a research paper on the potential of machine learning
-              models in analysing the risk factors and in turn preventing still
-              births from survey data. I've been tinkering with a lot of tech
-              stack, dipping my fingers in all waters viz. web 2.0 (which is
-              what I do for a living), web 3.0 (AR/VR, blockchain),
-              creative-coding, machine learning etc. to the point that I can
-              mean it when I say I'm a fast learner. Guess that's the perk of
-              being in this industry.
+              >. When I can take some time from official work, I try to build
+              applications to solve problems (sometimes non-existent) that could
+              potentially help people. Due to my lack of motivation to sell,
+              whatever I build usually goes to a cold repo in my github and
+              eventually to the freezing artic code vault. Back in the college
+              days, my team and I, won the Smart India Hackathon 2019 edition,
+              solving a problem of inconsistent data annotations in medical
+              research. Later during an internship, I worked with Prof. Dr. K.
+              Chandrasekaran at NIT Surathkal and published a research paper on
+              the potential of machine learning models in analysing the risk
+              factors and in turn preventing still births from survey data. I've
+              been tinkering with a lot of tech stack, dipping my fingers in all
+              waters viz. web 2.0 (which is what I do for a living), web 3.0
+              (AR/VR, blockchain), creative-coding, machine learning etc. to the
+              point that I can mean it when I say I'm a fast learner. Guess
+              that's the perk of being in this industry.
             </p>
           </div>
         </div>
@@ -255,12 +255,13 @@
               </div>
             </div>
           </div>
-          <h2 class="title" style="margin-top: 75px">Other Works</h2>
+          <h2 class="title-other">Other Works</h2>
           <div class="projects-content">
             <table class="projects-table">
               <tr>
                 <th>&bull;&emsp;Gesture Games</th>
                 <td>
+                  <span class="vh">Gesture Games</span>
                   An in-browser gaming arena for gesture and voice controlled
                   games.
                   <a
@@ -277,6 +278,7 @@
               <tr>
                 <th>&bull;&emsp;Gesture based Browser Control</th>
                 <td>
+                  <span class="vh">Gesture based Browser Control</span>
                   A Chrome extension to enable scrolling webpages and taking
                   screenshots with simple hand gestures.
                   <a
@@ -292,6 +294,9 @@
                   &bull;&emsp;Inconsistency detection in medical Annotations
                 </th>
                 <td>
+                  <span class="vh"
+                    >Inconsistency detection in medical Annotations</span
+                  >
                   An end-to-end Django based web-app with UMLS parsing in
                   back-end to detect inconsistent annotations in medical corpus,
                   for medical data science research.
@@ -306,6 +311,7 @@
               <tr>
                 <th>&bull;&emsp;Malicious URL detection</th>
                 <td>
+                  <span class="vh">Malicious URL detection</span>
                   A machine learning model to detect malicious phishing URLs
                   with an accuracy of 97.7%.
                 </td>
@@ -313,6 +319,7 @@
               <tr>
                 <th>&bull;&emsp;Movie Recommendation Engine</th>
                 <td>
+                  <span class="vh">Movie Recommendation Engine</span>
                   Movie Recommendation system based on Collaborative Filtering
                   using MovieLens Data set.
                 </td>
@@ -391,16 +398,18 @@
           <span class="far fa-copyright"></span> 2023 All rights reserved.</span
         >
         <span class="social">
-          <i class="fab fa-github"></i
-          ><a href="https://github.com/aravindmathradan">aravindmathradan</a>
-          <i class="fab fa-linkedin"></i
-          ><a href="https://www.linkedin.com/in/aravind-unnikrishnan/"
-            >aravind-unnikrishnan</a
+          <a href="https://github.com/aravindmathradan"
+            ><i class="fab fa-github"></i>aravindmathradan</a
           >
-          <i class="fab fa-instagram"></i
-          ><a href="https://www.instagram.com/aravind.in/">aravind.in</a>
-          <i class="fab fa-twitter"></i
-          ><a href="https://twitter.com/arvnd_in">arvnd_in</a>
+          <a href="https://www.linkedin.com/in/aravind-unnikrishnan/"
+            ><i class="fab fa-linkedin"></i>aravind-unnikrishnan</a
+          >
+          <a href="https://www.instagram.com/araaavind/"
+            ><i class="fab fa-instagram"></i>araaavind</a
+          >
+          <a href="https://twitter.com/arvnd_in"
+            ><i class="fab fa-twitter"></i>arvnd_in</a
+          >
         </span>
       </footer>
     </div>
