--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="#041022" />
     <title>Aravind Unnikrishnan - Software Engineer</title>
     <meta
       name="keywords"
@@ -18,6 +19,10 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
       integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
       crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css"
     />
     <link rel="stylesheet" href="css/style.css" type="text/css" />
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
@@ -98,76 +103,10 @@
       <section class="skills" id="skills">
         <div class="max-width">
           <h2 class="title">Skills</h2>
-          <div class="skills-content">
-            <table class="skills-table">
-              <tr>
-                <th>LANGUAGES</th>
-                <th>WEB 2.0</th>
-                <th>WEB 3.0</th>
-                <th>ML/DL LIBS</th>
-                <th>DATABASE</th>
-                <th>OTHER</th>
-                <th>OS</th>
-              </tr>
-              <tr>
-                <td>JavaScript (ES6+)</td>
-                <td>Node+Express</td>
-                <td>Unity</td>
-                <td>Pandas</td>
-                <td>MySQL/Oracle</td>
-                <td>Bash</td>
-                <td>Ubuntu/Linux</td>
-              </tr>
-              <tr>
-                <td>C/C++</td>
-                <td>Loopback</td>
-                <td>Three.js</td>
-                <td>Numpy</td>
-                <td>Firebase/Firestore</td>
-                <td>Git</td>
-                <td>Mac OS</td>
-              </tr>
-              <tr>
-                <td>Python</td>
-                <td>React/Angular</td>
-                <td>Blender</td>
-                <td>Scikit-learn</td>
-                <td>SQLite</td>
-                <td>Latex</td>
-                <td>Windows</td>
-              </tr>
-              <tr>
-                <td>C#</td>
-                <td>Elastic Search</td>
-                <td></td>
-                <td>GNU Octave</td>
-                <td></td>
-                <td></td>
-                <td></td>
-              </tr>
-              <tr>
-                <td></td>
-                <td>Redis</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-              </tr>
-              <tr>
-                <td></td>
-                <td>NGINX</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-              </tr>
-            </table>
-          </div>
         </div>
       </section>
 
+      const marqueeSpan =
       <section class="publications" id="publications">
         <div class="max-width">
           <h2 class="title">Research</h2>
@@ -414,6 +353,7 @@
       </footer>
     </div>
 
-    <script src="js/script.js"></script>
+    <script src="./data/skills.js"></script>
+    <script src="./js/script.js"></script>
   </body>
 </html>
