--- a/index.html
+++ b/index.html
@@ -79,21 +79,21 @@
                 target="_blank"
                 rel="noopener noreferrer"
                 >valuefy</a
-              >. When I can take some time from official work, I try to build
+              >. When I can take some time off from work, I try to build
               applications to solve problems (sometimes non-existent) that could
               potentially help people. Due to my lack of motivation to sell,
-              whatever I build usually goes to a cold repo in my github and
-              eventually to the freezing artic code vault. Back in the college
+              whatever I build usually ends up in a cold repo in my github and
+              eventually in the freezing artic code vault. Back in the college
               days, my team and I, won the Smart India Hackathon 2019 edition,
               solving a problem of inconsistent data annotations in medical
               research. Later during an internship, I worked with Prof. Dr. K.
               Chandrasekaran at NIT Surathkal and published a research paper on
               the potential of machine learning models in analysing the risk
-              factors and in turn preventing still births from survey data. I've
-              been tinkering with a lot of tech stack, dipping my fingers in all
+              factors in pregnancy that lead to still-births and in turn preventing them. I've
+              been tinkering with a lot of stacks, dipping my fingers in all
               waters viz. web 2.0 (which is what I do for a living), web 3.0
               (AR/VR, blockchain), creative-coding, machine learning etc. to the
-              point that I can mean it when I say I'm a fast learner. Guess
+              point that I mean it when I say I'm a fast learner. Guess
               that's the perk of being in this industry.
             </p>
           </div>
