Update github username changes

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Aravind Unnikrishnan - Software Engineer</title>
     <meta
       name="keywords"
-      content="Aravind, Unnikrishnan, Aravind Unnikrishnan, Portfolio, Personal Website, Data-Driven Stillbirth Prediction, Analysis of Risk Factors in Pregnancy, IIIT Pune, Indian Institute of Information Technology Pune, IIIT, Pune, aravindmathradan, software engineer, developer, lantern, popcorn, gesture-games, gesture-scroll, markdown editor"
+      content="Aravind, Unnikrishnan, Aravind Unnikrishnan, Portfolio, Personal Website, Data-Driven Stillbirth Prediction, Analysis of Risk Factors in Pregnancy, IIIT Pune, Indian Institute of Information Technology Pune, IIIT, Pune, aravindmathradan, araaavind, software engineer, developer, lantern, popcorn, gesture-games, gesture-scroll, markdown editor"
     />
     <meta
       name="description"
@@ -208,7 +208,7 @@
                     rel="noopener noreferrer"
                     >[Webapp]</a
                   >
-                  <a href="https://github.com/aravindmathradan/gesture-games"
+                  <a href="https://github.com/araaavind/gesture-games"
                     >[Github]</a
                   >
                 </td>
@@ -220,7 +220,7 @@
                   A Chrome extension to enable scrolling webpages and taking
                   screenshots with simple hand gestures.
                   <a
-                    href="https://github.com/aravindmathradan/gesture-scroll"
+                    href="https://github.com/araaavind/gesture-scroll"
                     target="_blank"
                     rel="noopener noreferrer"
                     >[Github]</a
@@ -239,7 +239,7 @@
                   back-end to detect inconsistent annotations in medical corpus,
                   for medical data science research.
                   <a
-                    href="https://github.com/aravindmathradan/SIH19_ezDI"
+                    href="https://github.com/araaavind/SIH19_ezDI"
                     target="_blank"
                     rel="noopener noreferrer"
                     >[Github]</a
@@ -336,8 +336,8 @@
           <span class="far fa-copyright"></span> 2023 All rights reserved.</span
         >
         <span class="social">
-          <a href="https://github.com/aravindmathradan"
-            ><i class="fab fa-github"></i>aravindmathradan</a
+          <a href="https://github.com/araaavind"
+            ><i class="fab fa-github"></i>araaavind</a
           >
           <a href="https://www.linkedin.com/in/aravind-unnikrishnan/"
             ><i class="fab fa-linkedin"></i>aravind-unnikrishnan</a
