--- a/index.html
+++ b/index.html
@@ -72,29 +72,17 @@
           <h2 class="title">About me</h2>
           <div class="about-content">
             <p>
-              I'm a software developer and an open-source enthusiast currently
-              building a powerful wealth-tech software at
+              I'm a software developer and open-source enthusiast currently building powerful wealth-tech software at 
               <a
                 href="www.valuefy.com"
                 target="_blank"
                 rel="noopener noreferrer"
                 >valuefy</a
-              >. When I can take some time off from work, I try to build
-              applications to solve problems (sometimes non-existent) that could
-              potentially help people. Due to my lack of motivation to sell,
-              whatever I build usually ends up in a cold repo in my github and
-              eventually in the freezing artic code vault. Back in the college
-              days, my team and I, won the Smart India Hackathon 2019 edition,
-              solving a problem of inconsistent data annotations in medical
-              research. Later during an internship, I worked with Prof. Dr. K.
-              Chandrasekaran at NIT Surathkal and published a research paper on
-              the potential of machine learning models in analysing the risk
-              factors in pregnancy that lead to still-births and in turn preventing them. I've
-              been tinkering with a lot of stacks, dipping my fingers in all
-              waters viz. web 2.0 (which is what I do for a living), web 3.0
-              (AR/VR, blockchain), creative-coding, machine learning etc. to the
-              point that I mean it when I say I'm a fast learner. Guess
-              that's the perk of being in this industry.
+              >. In my spare time, I enjoy creating applications to address various challenges (sometimes even imaginary ones) with the potential to help others. Despite my enthusiasm, my projects often end up in a cold GitHub repository and eventually in the Arctic Code Vault, due to my lack of motivation to promote them.
+
+During my college days, my team and I won the Smart India Hackathon 2019 by solving the issue of inconsistent data annotations in medical research. Later, during an internship, I collaborated with Prof. Dr. K. Chandrasekaran at NIT Surathkal, leading to the publication of a research paper on utilizing machine learning models to analyze risk factors in pregnancy that can lead to stillbirths, ultimately aiming to prevent them.
+
+I've experimented with various tech stacks, ranging from Web 2.0 (my professional forte) to Web 3.0 (AR/VR, blockchain), creative coding, and machine learning. My diverse experience has honed my ability to quickly learn and adapt, a valuable asset in the ever-evolving tech industry.
             </p>
           </div>
         </div>
