--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ I've experimented with various tech stacks, ranging from Web 2.0 (my professiona
         </div>
       </section>
 
-      <section class="skills" id="skills">
+      <section class="Hands-on experience with" id="skills">
         <div class="max-width">
           <h2 class="title">Skills</h2>
         </div>
