fix skills section

--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@ I've experimented with various tech stacks, ranging from Web 2.0 (my professiona
         </div>
       </section>
 
-      <section class="Hands-on experience with" id="skills">
+      <section class="skills" id="skills">
         <div class="max-width">
-          <h2 class="title">Skills</h2>
+          <h2 class="title">Hands-on experience with</h2>
         </div>
       </section>
 
