added smphr in projects

--- a/index.html
+++ b/index.html
@@ -138,6 +138,27 @@ I've experimented with various tech stacks, ranging from Web 2.0 (my professiona
         <div class="max-width">
           <h2 class="title">Featured Projects</h2>
           <div class="projects-content">
+            <div class="item alt">
+              <div class="column left">
+                <img
+                  src="img/smphr/fourscreens.png"
+                  alt="Aravind Unnikrishnan smphr app"
+                />
+              </div>
+              <div class="column right">
+                <h3 class="project-title">Semaphore</h3>
+                <p>
+                  Android/IOS app to follow, organize and read reddit
+                  posts/newsletters/youtube videos/RSS feeds etc.
+                </p>
+                <a
+                  href="https://github.com/araaavind/semaphore"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  >Open in Github</a
+                >
+              </div>
+            </div>
             <div class="item">
               <div class="column left">
                 <img
