--- a/index.html
+++ b/index.html
@@ -152,10 +152,10 @@ I've experimented with various tech stacks, ranging from Web 2.0 (my professiona
                   posts/newsletters/youtube videos/RSS feeds etc.
                 </p>
                 <a
-                  href="https://github.com/araaavind/semaphore"
+                  href="https://play.google.com/store/apps/details?id=io.smphr.app&hl=en"
                   target="_blank"
                   rel="noopener noreferrer"
-                  >Open in Github</a
+                  >Open in Playstore</a
                 >
               </div>
             </div>
