Update about me section

--- a/index.html
+++ b/index.html
@@ -72,12 +72,12 @@
           <h2 class="title">About me</h2>
           <div class="about-content">
             <p>
-              I'm a software developer and open-source enthusiast currently building powerful wealth-tech software at 
+              I'm a software developer and open-source enthusiast currently building a one-stop platform for outdoor ad booking called 
               <a
-                href="www.valuefy.com"
+                href="adcentra.ai"
                 target="_blank"
                 rel="noopener noreferrer"
-                >valuefy</a
+                >Adcentra</a
               >. In my spare time, I enjoy creating applications to address various challenges (sometimes even imaginary ones) with the potential to help others. Despite my enthusiasm, my projects often end up in a cold GitHub repository and eventually in the Arctic Code Vault, due to my lack of motivation to promote them.
 
 During my college days, my team and I won the Smart India Hackathon 2019 by solving the issue of inconsistent data annotations in medical research. Later, during an internship, I collaborated with Prof. Dr. K. Chandrasekaran at NIT Surathkal, leading to the publication of a research paper on utilizing machine learning models to analyze risk factors in pregnancy that can lead to stillbirths, ultimately aiming to prevent them.
